# pgc-atlas

./: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml
api/: app.py  models.py
api/routes/: datasets.py  export.py  plots.py  variants.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: CrossTraitHeatmap.tsx  DisorderCard.tsx  Header.tsx  Layout.tsx  ManhattanPlot.tsx  QQPlot.tsx  Sidebar.tsx  StatsPanel.tsx  VariantTable.tsx
dashboard/src/hooks/: useDataset.ts  usePlotData.ts
dashboard/src/pages/: About.tsx  CompareView.tsx  Dashboard.tsx  DisorderView.tsx  SearchResults.tsx
dashboard/src/types/: index.ts
dashboard/src/utils/: colors.ts  format.ts
notebooks/: 01_quick_start.ipynb  02_manhattan_plots.ipynb  03_cross_disorder.ipynb  04_data_export.ipynb
pgc_explorer/: __init__.py  config.py  cross_trait.py  data_loader.py  export.py  gene_annotator.py  ld_scores.py  manhattan.py  miami.py  pipeline.py  qq_plot.py  volcano.py
