[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pgc-atlas"
version = "0.1.0"
description = "Interactive explorer for Psychiatric Genomics Consortium GWAS summary statistics hosted on HuggingFace"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PGC Atlas Contributors"},
]
keywords = ["gwas", "genomics", "psychiatry", "pgc", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "datasets>=2.16.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pyarrow>=15.0.0",
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "plotly>=5.18.0",
]

[project.urls]
Homepage = "https://github.com/Noptus/pgc-atlas"
Documentation = "https://github.com/Noptus/pgc-atlas#readme"
"Bug Tracker" = "https://github.com/Noptus/pgc-atlas/issues"
"HuggingFace Collection" = "https://huggingface.co/collections/OpenMed/pgc-psychiatric-gwas-summary-statistics"

[tool.setuptools.packages.find]
include = ["pgc_explorer*", "api*"]

[tool.ruff]
line-length = 120
target-version = "py310"
